--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -106,7 +106,7 @@
 				<a href="/tv" target="_parent">TV</a>
 				<br>
 				↳
-				<a href="/books" target="_parent">books</a>
+				<a href="/reading/index.html" target="_parent">books</a>
 				<img src="/!g/pix/caution1.gif" />
 				<br />
 				↳
@@ -118,7 +118,10 @@
 				<a href="/projects/bash" target="_parent">bash reference sheet</a>
 				<br />
 				↳
-				<a href="/projects/learning-js" target="_parent">learning JS</a>
+				<a href="/projects/javascript/index.html" target="_parent">learning javascript</a>
+				<br />
+				↳
+				<a href="/projects/python/index.html" target="_parent">learning python</a>
 			</ul>
 			<li><a href="/guestbook/index.html" target="_parent">guestbook</a></li>
 			<ul>
@@ -128,9 +131,14 @@
 			<ul>
 				<li><b>links</b></li>
 				<ul>
+
+					↳
+					<a href="/sites/index.html" target="_parent">button wall</a>
+					<br />
 					↳
 					<a href="/notebook/links/index.html" target="_parent">links &amp; resources</a>
-					<br />↳
+					<br />
+					↳
 					<a href="/notebook/links/credit.html" target="_parent">credit &amp; inspiration</a>
 					<br />
 					↳
@@ -182,7 +190,6 @@
 			<li><b>misc pages</b></li>
 			<ul>
 				<li><a href="/safe-spot/index.html" target="_parent">safe spot</a></li>
-				<li><a href="/sites/index.html" target="_parent">button wall</a></li>
 				<li><a href="/webgarden/greenhouse.html" target="_parent">webgarden greenhouse</a></li>
 				<li><a href="/masaaki-yuasa/index.html" target="_parent">masaaki yuasa watchlist</a></li>
 				<li><a href="/october-movies/index.html">october movies</a></li>
