new featured song n album

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -124,14 +124,14 @@
   <div id="featured" class="box">
    <h3>featured song &amp; album</h3>
    <div class="song">
-    <h4><b>upward movement (dave owns)</b></h4>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hJ0LKX2tF5M?si=HEETSrG7pspx1beU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>SICK of pretending like this song isn't straight up FIRE. i'm not afraid to admit that homestuck has some bangers up its sleeve but this one is possibly my favorite one. i love the midi strings or whatever that's called. and the little change up during the 2nd half of this song is just so fucking great too.</p>
+    <h4><b>DIM</b> - yves</h4>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5bTxQVXR82w?si=TkmNSBK0JH6quKp7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>yves' new EP was pretty neat! i love the beat switch of this one tho.... feels so ethereal. really nice ending to the release.</p>
    </div>
    <div class="lp">
-    <h4><b>imaginal disk</b> - magdalena bay</h4>
-    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1709829577/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://magdalenabay.bandcamp.com/album/imaginal-disk">Imaginal Disk by Magdalena Bay</a></iframe>
-    <p>i can't stop listening to this, this is so magical! my favorite songs are <i>death & romance</i>, <i>vampire in the corner</i>, <i>fear, sex</i>. <a href="/music/listening-log/2024/fall.html#3" target="_parent">listening log</a></p>
+    <h4><b>seeyalater stratocaster</b> - ippo.tsk</h4>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/RfZplKbuOdI?si=du9qvEbwTRbTPB8H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>super neat indie rock with synth vocals.</p>
    </div>
    <hr>
 
