--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -62,10 +62,25 @@ iframe2
 </td></table>
 </details>
 -->
-
 		<details open>
 			<summary>
-				<span class="date">19.oct.24 - ? : upward movement (dave owns) / imaginal disk</span>
+				<span class="date">16.nov.24 - ??? : DIM / seeyalater stratocaster</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5bTxQVXR82w?si=TkmNSBK0JH6quKp7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					yves' new EP was pretty neat! i love the beat switch of this one tho.... feels so ethereal. really nice ending to the release.
+				</td>
+				<td class="t-right">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/RfZplKbuOdI?si=du9qvEbwTRbTPB8H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					super neat indie rock with synth vocals!
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">19.oct.24 - 16.nov.24 : upward movement (dave owns) / imaginal disk</span>
 			</summary>
 			<table>
 				<td class="t-left">
