--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,6 +36,10 @@
 			</article> -->
 
 			<article>
+				<p><b>17.nov.24</b> i've been so busy lately but i can't wait to talk about my new kitten, <b>steve minecraft</b>, in a future journal log !! now i have 2 sons. <button onclick="showPic('!g/241117-steve.jpeg','a black cat in a ball','black cats LOVE me... also hes so cuteful')">steve.jpg</button></p>
+			</article>
+
+			<article>
 				<p><b>06.nov.24 - 1am</b> <u>good news</u>: i replaced my laptop's fans and now they are working perfectly <img src="/!g/pix/heart4.png" alt=""> <u>bad news</u>: the US and PR elections. double whammy. i am coping with <b>webfishing</b>.</p>
 			</article>
 
