fixed carmela can png, added a date for original shrinetexts

--- a/doqmeat/shrines/mizu/index.html
+++ b/doqmeat/shrines/mizu/index.html
@@ -95,7 +95,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 
 				<div class="deco" style="top:-3%;left:100%;rotate:20deg;"><img class="border1" src="/!g/deco/catsticker1y.png" width="180px;"></div>
 
-				<div class="deco" style="top:130%;left:120%;rotate:-20deg;"><img title="the carmela sausages in question" class="border1" src="https://cdn.shopify.com/s/files/1/0591/4604/3579/products/435-004.png?v=1628435816" width="100px;"></div>
+				<div class="deco" style="top:130%;left:120%;rotate:-20deg;"><img title="the carmela sausages in question" class="border1" src="!g/carmela-can.png" width="100px;"></div>
 
 				<div class="deco" style="top:100%;left:0%;rotate:0deg;"><img title="always thought she looked like a tiger. she was really fucking big as well" class="border1" src="/!g/deco/va04-icon-tiger.gif" width=""></div>
 
@@ -169,7 +169,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 
 
 			<div class="text-bbl left">
-				<p>mizu has been there through my worst times, and my best times. i've spent 11 years of my life with this cat. and man, do i love him so much. i had to say goodbye to him in 2021 when i moved out sadly. i knew he would be better staying there so instead of putting him through another insufferable airplane ride, i let him stay with my mom. it was a bit hard when i decided to move away. because i knew i couldnt take him with me. but despite the sadness that i feel from missing his meows, his playful aura, at least i have 11 years of memories with him. and no one can take that away from me. as of writing this, this year he will be 13 years old!!!! hes such a big boy!! i hope to visit him sometime in the future. and if anything happens, i am so so so happy i got to watch him grow right beside me and spend my time with such a wonderful cat. my meow meow. love you forever mizu.</p>
+				<p>mizu has been there through my worst times, and my best times. i've spent 11 years of my life with this cat. and man, do i love him so much. i had to say goodbye to him in 2021 when i moved out sadly. i knew he would be better staying there so instead of putting him through another insufferable airplane ride, i let him stay with my mom. it was a bit hard when i decided to move away. because i knew i couldnt take him with me. but despite the sadness that i feel from missing his meows, his playful aura, at least i have 11 years of memories with him. and no one can take that away from me. as of writing this, this year he will be 13 years old!!!! hes such a big boy!! i hope to visit him sometime in the future. and if anything happens, i am so so so happy i got to watch him grow right beside me and spend my time with such a wonderful cat. my meow meow. love you forever mizu. <b>written on 21.may.23</b></p>
 			</div>
 
 			<!-- 	stickers -->
