--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -128,8 +128,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dandadan + arcane S2</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> reworking art page + <a href="https://siinamota.doqmeat.com" target="_blank">siinamota fansite</a></p>
-			<p class="date">last updated on 09.nov.24</p>
+			<p><span class="hl">working on:</span> taking care of my new kitty!</p>
+			<p class="date">last updated on 17.nov.24</p>
 
 		</div>
 
