--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -63,7 +63,7 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 			<p>links: <a title="food journal" href="https://moku.blog/user/doqmeat" target="_blank" class="outlink"> moku.blog</a></p>
 			<p><a href="/">home</a> / <a href="/sitemap">sitemap</a></p>
 
-			<button title="memos are also draggable!" onclick="closeMemos()">hide memos</button>
+			<button class="hide" title="memos are also draggable!" onclick="closeMemos()">hide memos</button>
 
 
 		</nav>
