--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -45,14 +45,14 @@
 		<p>a lot of the graphics in my site are from collection pages that rarely have their stuff sourced. i have tried my best to look for credit on some of these but if <u>i've used something that is not free to use please contact me and i will happily remove it</u>! if you know the credit for something you don't see credited or can't find what you're looking for, you're always welcome to send a msg in my chatbox or e-mail. happy coding!</p>
 
 		<h2 id="home">homepage v4 credits</h2>
-		<li><a href="https://pastebin.com/PiDgrv3J" target="_blank">music player</a> by <a href="https://adilene.net/" target="_blank">adilene</a></li>
+		<li><a href="fonts.html">fonts</a> used: gaegu, spirit, morningtea</li>
 
 		<h3>garden theme</h3>
 		<li>body background pattern from <a href="https://web.archive.org/web/20081228002347/http://ritvasgallery.com/files0/fallflowers.htm" target="_blank">ritva's gallery</a></li>
 
 		<hr>
 
-		<h2>ARCHIVE - homepage v3 credits</h2>
+		<h2>ARCHIVED - homepage v3 credits</h2>
 		<li>most pixels were found from pixel collection pages. i'd love to find the sources for each of them so i can give proper credit so if any one knows, please e-mail me!</li>
 		<li><a href="https://www.tumblr.com/compassionately/688695677850714112/1999-neocities-layout-by-me-emotion-preview?source=share" target="_blank">js audio button</a> code from this template!</li>
 		<li><a href="https://codepen.io/sadness97/pen/mdOXzNW" target="_blank">falling items</a> code</li>
