fixed soul lady div, some broken pics, added link to template!

--- a/doqmeat/music/fav-albums.html
+++ b/doqmeat/music/fav-albums.html
@@ -107,11 +107,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<p><img src="!g/cds/yukika-soullady-pitapet.jpg" width="100%"></p>
 					<p>i've also made a carrd inspired by the passport! i remember i had so much fun trying to recreate it. sadly i have a new template for my carrd and i didnt save this one but you can still check out through the <a href="https://web.archive.org/web/20230424014841/https://desteny.carrd.co/#a" target="_blank">wayback machine</a> (though the imgs that show up werent the ones i was using). i hope to recreate it on my website someday! maybe for a yukika shrine? hmmmmmm <img src="/!g/pix/cathead.gif"></p>
 
-					<details>
-						<summary>screenshots of yukika carrd</summary>
-						<p class="centered"><img src="/!g/music/other/soullady-carrd.jpg" width="80%"></p>
-						<p><img src="/!g/music/other/soullady-carrd1.jpg" width="100%"></p>
-					</details>
+					<p><b>19.nov.24 update:</b> i did eventually code a template based on the passport inclusion!!! i had so much fun with it. you can check it out <a href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank" class="outlink">here</a>!</p>
 
 					<p><b>fav songs:</b> from hnd to gmp <img src="/!g/pix/staryellow.gif"> neon <img src="/!g/pix/staryellow.gif"> soul lady <img src="/!g/pix/staryellow.gif"> yesterday <img src="/!g/pix/staryellow.gif"> pit-a-pet <img src="/!g/pix/staryellow.gif"> shade <img src="/!g/pix/staryellow.gif"> cherry jubiles</p>
 					<p><b>links:</b> <a href="https://open.spotify.com/album/5rsgGy09HIAwtIy5oF5MhF?si=LH4aXDIARH2b8Wt6cPmekg" target="_target">spotify</a> / <a href="https://youtube.com/playlist?list=PL9JO-rzCKatkuJBEa63IkVwIk8hCoxKjB" target="_blank">youtube playlist</a></p>
@@ -594,7 +590,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 	<footer>
 		<img src="/!g/deco/iluvmusic.gif" align="left">
 		<img src="/!g/deco/jam.gif" align="right">
-		<b>last updated on 08.dec.23:</b> added scans to <i>serotonin II</i>.
+		<b>last updated on 19.nov.24</b>
 		<br>
 		album scans in this page have all been scanned by me unless stated otherwise!
 		<br>
