--- a/doqmeat/music/fav-albums.html
+++ b/doqmeat/music/fav-albums.html
@@ -422,7 +422,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv float"><img src="!g/fav-albums/kumoribi.jpg"><button title="曇日 (kumoribi)" class="btn" href="#kumoribi"></button></div>
+			<div class="filterDiv float"><img src="!g/fav-albums/kumoribi.jpg"><button title="曇日 (kumoribi)" class="btn" onclick="popup('kumoribi')"></button></div>
 			<div id="kumoribi" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
