added link to lastfm widget

--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -46,9 +46,10 @@
 
 		<h2 id="home">homepage v4 credits</h2>
 		<li><a href="fonts.html">fonts</a> used: gaegu, spirit, morningtea</li>
+		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">lastfm last played widget</a> by bianca rosa</li>
 
 		<h3>garden theme</h3>
-		<li>body background pattern from <a href="https://web.archive.org/web/20081228002347/http://ritvasgallery.com/files0/fallflowers.htm" target="_blank">ritva's gallery</a></li>
+		<li>body background pattern from <a href=" https://web.archive.org/web/20081228002347/http://ritvasgallery.com/files0/fallflowers.htm" target="_blank">ritva's gallery</a></li>
 
 		<hr>
 
