added link to yume no manimani scans

--- a/doqmeat/music/fav-albums.html
+++ b/doqmeat/music/fav-albums.html
@@ -554,7 +554,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<p><img src="!g/cds/siinamota-yumenomanimani.jpg" alt="yume no manimani album cover" width="40%" class="r-img">
 						i remember vividly where i was when i first heard this album. this is probably my 2nd fav album of his!!!</p>
 					<p>i love how cohesive it is and the song order and everything just feels SO PERFECT!!!! the interludes are a super nice touch as well, <i>lost & found</i> being one of them while also being one of my favorite siinamota songs! you can read more about my love for this song <a href="/blog/2023/230912-vocaloid#lost" target="_blank">here!</a></p>
-					<p>also the booklet of this album is so sweet. i love <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>'s art so much!!
+					<p>also the <a title="archive.org scans" href="https://archive.org/details/yume-no-manimani-scans" target="_blank" class="outlink">booklet</a> of this album is so sweet. i love <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>'s art so much!!
 					<p>
 						<img src="/shrines/siinamota/yume-no-manimani/p10.jpg" width="100%">
 						<img src="/shrines/siinamota/yume-no-manimani/p3.jpg" width="100%">
