updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -183,6 +183,10 @@
 			<a href="https://featherfae.neocities.org/" target="_blank"><img src="!g/faetherfae.gif" alt="faetherfae"></a>
 			<a href="https://onthequiet.nekoweb.org/" target="_blank"><img src="!g/onthequiet.gif" alt="onthequiet"></a>
 			<a href="https://miserabledolly.neocities.org/" target="_blank"><img src="!g/miserabledolly.gif" alt="miserabledolly"></a>
+			<a href="https://strawberryreverie.neocities.org" target="_blank"><img src="!g/strawberryreverie.gif" alt="strawberryreverie"></a>
+			<a href="https://taami.neocities.org/" target="_blank"><img src="!g/taami.gif" alt="taami"></a>
+			<a href="https://visualculture.vc/" target="_blank"><img src="!g/visualculture.png" alt="visualculture"></a>
+			<a href="https://iwishyouroses.neocities.org/" target="_blank"><img src="!g/iwishyouroses.png" alt="i wish you roses"></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
