minor changes to about

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -40,7 +40,7 @@
 
 	<!-- quizzes  -->
 	<div id="quiz" class="draggable">
-		<div class="header"><img src="!g/folder.png" class="folder"> quiz results<img onclick="closeBox('quiz')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="header"><img src="!g/folder.png" class="folder"> quiz_results<img onclick="closeBox('quiz')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<A href="https://www.theotaku.com/quizzes/view/3913/which_hatsune_miku_nendoroid_model_are_you%3F"><img border="0" src="http://www.theotaku.com/guru_results/3913_Sakura_Miku.jpg" width="100%" alt="Which Hatsune Miku Nendoroid Model Are You?" /><br /></a><A href="https://www.theotaku.com/quizzes/view/3913/which_hatsune_miku_nendoroid_model_are_you%3F">Which Hatsune Miku Nendoroid Model Are You?</A><br />Hosted By theOtaku.com: <a href="http://www.theotaku.com" title="Anime">Anime</a>
@@ -128,7 +128,7 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">
-					hello everyone! i go by <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> and i am <mark>the webmaster of this site!</mark> i'm 24 years old from a small island called puerto rico. i've lived here pretty much my entire life. my first language is spanish though my site is mostly in english. an online habit i guess *shrugs* pero como quiera se pueden comunicar conmigo en cualquiera de los dos idiomas. i'm a little freak<sup>tm</sup> and my pronouns are he / she. i'm currently studying computer science in university! which was kickstarted in 2023 by my interest in coding as i learned more and more about maintaining a personal website.</p>
+					hello everyone! i go by <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> and i am <mark>the webmaster of this site!</mark> i'm 24 years old from a small island called puerto rico. i've lived here pretty much my entire life. my website <small>(and overall online presence...)</small> is in english though my native language is spanish. you can talk to me in either one of them. i'm a little freak<sup>tm</sup> and my pronouns are he / she. currently studying for a bachelor's degree in computer science because i find it pretty interesting and fun. and yes, coding my site kickstarted my interest in it <img src="/!g/pix/heart4.png" alt=""></p>
 
 				<p>（*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
 
@@ -146,7 +146,7 @@
 
 				<p><a title="art by blackrabbit-25" href="https://www.deviantart.com/blackrabbit-25" target="_blank"><img src="/!g/deco/blackrabbit25-book.gif" align="right" style="margin-top:-25px;"></a>so think of my website as a digital journal. i will share bits and pieces of my personal life, interests, passions, and even creations. <mark>my goal is simply to have a place on the internet where i can freely be myself without the chaos and limitations of social media. and to have fun</mark>, of course :3 i wouldn't be doing any of this if it wasn't fun for me.</p>
 
-				<p style="text-align: right"><b>last updated on: 29.aug.24</b></p>
+				<p style="text-align: right"><b>last updated on: 19.nov.24</b></p>
 			</div>
 		</div>
 	</div>
@@ -187,14 +187,14 @@
 		<div class="header">favs.txt<img onclick="closeBox('likes')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
-				<h3>general</h3>
+				<h3>in general</h3>
 				<li>cats</li>
 				<li>chocolate milk</li>
 				<li>making lists</li>
-				<li>visual arts</li>
+				<li>journaling</li>
 				<li>horror</li>
 				<li>driving at night (with no traffic)</li>
-				<li>coding HTML and CSS</li>
+				<li>coding HTML, CSS, JS</li>
 				<li>hand shakes</li>
 				<li>the color purple and yellow</li>
 
@@ -213,6 +213,7 @@
 				<li>eizouken</li>
 
 				<h3>films</h3>
+				<li>look back</li>
 				<li>wall-e</li>
 				<li>madoka magica rebellion</li>
 				<li>everything everywhere all at once</li>
@@ -227,22 +228,6 @@
 			</div>
 		</div>
 	</div>
-
-	<!--
-	<div class="dislikes draggable">
-		<div class="header">i_hate_u.txt<img onclick="closeBox('')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
-		<div class="borderwrap">
-			<div class="wrapper-in padding list">
-				<li>most spicy food...</li>
-				<li>driving at night (with traffic and/or rain)</li>
-				<li>living in a US colony</li>
-				<li>the puertorican government</li>
-				<li>nfts, AI shit, whatever cryptobros are up to</li>
-				<li>coding JavaScript <small>i am slowly learning though....</small></li>
-			</div>
-		</div>
-	</div>
--->
 
 	<div id="nostalgia" class="draggable">
 		<div class="header"><img src="!g/folder.png" class="folder"> nostalgia<img onclick="closeBox('nostalgia')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
