credit for icy theme

--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -48,6 +48,11 @@
 		<li><a href="fonts.html">fonts</a> used: gaegu, spirit, morningtea</li>
 		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">lastfm last played widget</a> by bianca rosa</li>
 
+		<h3>icy theme</h3>
+		<li>body background from <a href="https://unsplash.com/@erol?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Erol Ahmed</a> on <a href="https://unsplash.com/photos/mountains-covered-with-snow-d3pTF3r_hwY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+		</li>
+		<li><a href="fonts.html">fonts</a> used: simple, kakomia, bm-neko</li>
+
 		<h3>garden theme</h3>
 		<li>body background pattern from <a href=" https://web.archive.org/web/20081228002347/http://ritvasgallery.com/files0/fallflowers.htm" target="_blank">ritva's gallery</a></li>
 
