new theme for homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -19,7 +19,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<link href="fonts/stylesheet.css" rel="stylesheet">
 	<link href="!f/v4/body.css" rel="stylesheet">
 	<!-- themes -->
-	<link class="theme" href="!f/v4/sunset/style.css" rel="stylesheet" type="text/css">
+	<link class="theme" href="!f/v4/icy/style.css" rel="stylesheet" type="text/css">
 	<script src="!f/v4/theme.js"></script>
 	<!--	extra -->
 	<link rel="stylesheet" href="https://sugarforbrains.neocities.org/mobring/onionring.css">
@@ -34,7 +34,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<div id="wrapper">
 		<header id="header">
 			<select name="theme" onchange="pickTheme(this.value)">
-				<!-- <option value="!f/v4/silly/style.css">silly</option> -->
+				<option value="icy">icy</option>
 				<option value="sunset">sunset</option>
 				<option value="garden">garden</option>
 			</select>
@@ -128,8 +128,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dandadan + arcane S2</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> taking care of my new kitty!</p>
-			<p class="date">last updated on 17.nov.24</p>
+			<p><span class="hl">working on:</span> new homepage theme + end of uni semester</p>
+			<p class="date">last updated on 20.nov.24</p>
 
 		</div>
 
@@ -339,7 +339,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<footer id="foot" class="box">
 			<p><a href="/notebook/links/credit.html#home">credit</a> for materials used / homepage running on v4</p>
-			<p>coded with love by <b>des</b> / on the web since <b>11.apr.23</b> / hosted on <a href="https://neocities.org" target="_blank">neocities</a> / <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a></p>
+			<p>coded with love by <b>des</b> / on the web since <b>11.apr.23</b> / hosted on <a href="https://neocities.org" target="_blank">neocities</a> / <a title="email me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a></p>
 			<a title="link to rosemary's free palestine page full of great resources on how to know and help the people of palestine" href="https://hillhouse.neocities.org/journal/notes/palestine" target="_blank"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
 			<img src="/collection/internet-graphics/!g/best%20viewed.jpg">
 			<img src="/collection/internet-graphics/!g/nop.gif">
