--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -33,7 +33,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 	<div id="wrapper">
 		<header id="header">
-			<select name="theme" onchange="pickTheme(this.value)">
+			<select title="change the homepage theme!" name="theme" onchange="pickTheme(this.value)">
 				<option value="icy">icy</option>
 				<option value="sunset">sunset</option>
 				<option value="garden">garden</option>
