--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -51,7 +51,7 @@
 		<h3>icy theme</h3>
 		<li>body background from <a href="https://unsplash.com/@erol?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Erol Ahmed</a> on <a href="https://unsplash.com/photos/mountains-covered-with-snow-d3pTF3r_hwY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
 		</li>
-		<li><a href="fonts.html">fonts</a> used: simple, kakomia, bm-neko</li>
+		<li><a href="fonts.html">fonts</a> used: simple, kakomia, bm-neko, bangalore, nintendo ds bios</li>
 
 		<h3>garden theme</h3>
 		<li>body background pattern from <a href=" https://web.archive.org/web/20081228002347/http://ritvasgallery.com/files0/fallflowers.htm" target="_blank">ritva's gallery</a></li>
