--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -195,6 +195,7 @@
 			<img src="!g/eatshit.gif">
 			<img src="!g/i-love-my-3ds.gif">
 			<img src="!g/birdapp.gif">
+			<a href="https://transjerma985.tumblr.com/post/702749964196052992/recently-watched-dollhouse-and-had-to-make" target="_blank"><img src="!g/dollhouse.gif" alt="jerma's dollhouse"></a>
 			<a href="https://shishka.neocities.org/nofollow/site-dont-blink" target="_blank"><img src="!g/blockads.gif"></a>
 			<img src="!g/mikuplsinteract.gif">
 			<img src="!g/lovipod.gif">
