added a new thing i wanna do on the learning JS page

--- a/doqmeat/projects/javascript/index.html
+++ b/doqmeat/projects/javascript/index.html
@@ -38,16 +38,19 @@
 
 		<h2>JS to-do list</h2>
 		<ul>
-			<li><s>have different themes that stay selected on reload</s> i've done this but i know there's a more efficent way of doing it...</li>
-			<li>how to filter classes</li>
-			<li><s>img modal pop up?</s></li>
-			<li>how to have stuff loaded randomly</li>
-			<li>do XML file to HTML with JS</li>
+			<li>fetch XML file to HTML with JS</li>
+			<li>make my own music player with play, skip buttons, and a playlist.</li>
+			<li><s>have different themes that stay selected on reload</s> - used in <a href="/">homepage</a></li>
+			<li><s>how to filter classes</s> - used in <a href="/art">art</a> page</li>
+			<li><s>img modal pop up?</s> - used in <a href="/music/fav-albums.html">fav albums</a> page</li>
+			<li><s>how to have stuff loaded randomly</s> - used in <a href="/music">music</a> page</li>
 		</ul>
 	</main>
 
 	<footer>
 		....... ᓚᘏᗢ .......
+		<br>
+		<b>last updated on: 22.nov.24</b>
 		<br>
 		<a href="/projects">projects</a> / <a href="/">home</a> / <a href="#">top</a>
 	</footer>
