--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -45,17 +45,18 @@
 		<p>a lot of the graphics in my site are from collection pages that rarely have their stuff sourced. i have tried my best to look for credit on some of these but if <u>i've used something that is not free to use please contact me and i will happily remove it</u>! if you know the credit for something you don't see credited or can't find what you're looking for, you're always welcome to send a msg in my chatbox or e-mail. happy coding!</p>
 
 		<h2 id="home">homepage v4 credits</h2>
-		<li><a href="fonts.html">fonts</a> used: gaegu, spirit, morningtea</li>
 		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">lastfm last played widget</a> by bianca rosa</li>
 
 		<h3>icy theme</h3>
-		<li>body background from <a href="https://unsplash.com/@erol?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Erol Ahmed</a> on <a href="https://unsplash.com/photos/mountains-covered-with-snow-d3pTF3r_hwY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-		</li>
+		<li>body background from <a href="https://unsplash.com/@erol?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Erol Ahmed</a> on <a href="https://unsplash.com/photos/mountains-covered-with-snow-d3pTF3r_hwY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></li>
 		<li><a href="fonts.html">fonts</a> used: simple, kakomia, bm-neko, bangalore, nintendo ds bios</li>
 
 		<h3>garden theme</h3>
-		<li>body background pattern from <a href=" https://web.archive.org/web/20081228002347/http://ritvasgallery.com/files0/fallflowers.htm" target="_blank">ritva's gallery</a></li>
+		<li><a href="fonts.html">fonts</a> used: gaegu, morningtea</li>
+		<li>body background pattern from <a href=" https://web.archive.org/web/20081228002347/http://ritvasgallery.com/files0/fallflowers.htm" target="_blank">ritva's gallery</a> <img src="/!g/bg/ritva-2.gif" alt="bg pattern"></li>
 
+		<h3>sunset theme</h3>
+		<li><a href="fonts.html">fonts</a> used: gaegu, morningtea</li>
 		<hr>
 
 		<h2>ARCHIVED - homepage v3 credits</h2>
