added new graphics

--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -253,6 +253,7 @@
 			<img src="!g/windose.png" alt="windose">
 			<img src="!g/hostedneo.gif">
 			<img src="!g/youcantoo!.gif">
+			<img src="!g/chococat.gif" alt="chococat button">
 			<img src="!g/nft.gif">
 			<img src="!g/guestbook.gif">
 			<a href="https://vurren.neocities.org/" target="_blank"><img src="!g/owntwopaws.gif"></a>
@@ -276,9 +277,7 @@
 		<h2 id="5" class="title">other</h2>
 		<div id="other" class="container">
 			<img src="!g/blinkychoco.gif">
-			<br>
-			<!--		user boxes -->
-			<img src="!g/borntodie.png">
+			<img src="/!g/deco/nice" <img src="!g/borntodie.png">
 			<img src="!g/unseen.png">
 		</div>
 
@@ -286,7 +285,7 @@
 	</div>
 
 	<footer>
-		<p>last updated on: <b>24.aug.24</b></p>
+		<p>last updated on: <b>22.nov.24</b></p>
 		<p>page built with materials by <a href="https://foollovers.com/" target="_blank">foollovers</a> and bg by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a></p>
 		<a href="/collection">collection</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
