--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -128,8 +128,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dandadan + arcane S2</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> new homepage theme + end of uni semester</p>
-			<p class="date">last updated on 20.nov.24</p>
+			<p><span class="hl">working on:</span> finishing this uni semester stress free</p>
+			<p class="date">last updated on 22.nov.24</p>
 
 		</div>
 
