added a ko-fi button to homepage if you want to support me

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -347,6 +347,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<img src="/collection/internet-graphics/!g/antinft.png">
 			<a href="https://yesterweb.org/no-to-web3/" style="background: transparent"><img src="/collection/internet-graphics/!g/yesterweb-saynotoweb3.gif"></a>
 			<a href="http://validator.w3.org/feed/check.cgi?url=https%3A//doqmeat.com/rss.xml" target="_blank"><img src="/notebook/tutorials/rss/valid.png" alt="[Valid RSS]" title="Validate my RSS feed"></a>
+			<a href="https://ko-fi.com/doqmeat" target="_blank"><img src="!f/v4/icy/ko-fi.png" alt="ko-fi button"></a>
 		</footer>
 		<!--		wrapper end div-->
 	</div>
