--- a/doqmeat/notebook/F2U/materials.html
+++ b/doqmeat/notebook/F2U/materials.html
@@ -33,7 +33,6 @@
 		.link {
 			text-decoration: none;
 		}
-
 	</style>
 </head>
 
@@ -45,6 +44,9 @@
 				<h1>site materials</h1>
 			</center>
 		<p>credit is not necesary but a link back is appreciated!</p>
+
+		<h2 id="buttons">buttons</h2>
+		<p><img src="../!g/ko-fi-template.png" alt="ko-fi template button"> ko-fi template button. background is transparent.</p>
 
 		<h2 id="bgs">backgrounds</h2>
 
