--- a/doqmeat/notebook/F2U/codes.html
+++ b/doqmeat/notebook/F2U/codes.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>templates</title>
-	<link rel="icon" type="image/x-icon" href="favicon.gif">
+	<link rel="icon" type="image/x-icon" href="../favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="F2U.css" rel="stylesheet" type="text/css" media="all">
