--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -201,6 +201,7 @@
 		<li><a href="https://melonking.net/melon?z=%2Ffree%2Fsoftware%2Fgallery-maker" target="_blank">melon's gallery maker</a> - micro static site generator that let's you share pics into your website easily!</li>
 		<li><a href="https://getpublii.com/" target="_blank">publii</a> - content manager for your static site! very easy to use and set up</li>
 		<li><a href="https://biati-digital.github.io/glightbox/" target="_blank">glightbox</a> - gallery tool with lots of options!</li>
+		<li><a href="https://zonelets.itch.io/zonelets" target="_blank">zonelets</a> - a static blogging tool</li>
 
 		<h4>calendars / clocks</h4>
 		<li><a href="https://calendar.sakura.ne.jp/blog_cal.html" target="_blank">calendar.sakura.ne</a> - pastel colors japanese calendar</li>
