new journal log

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -34,6 +34,7 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 			<p>i write about my life, site stuff, and any other misc things here. <small>i don't proof read what i write in these.</small> <a href="credit.html" target="log">credit</a></p>
 			<details>
 				<summary>2024</summary>
+				<a href="2024/11.html" target="log">november</a>
 				<a href="2024/10.html" target="log">october</a>
 				<a href="2024/09.html" target="log">september</a>
 				<a href="2024/08.html" target="log">august</a>
@@ -69,7 +70,7 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 		</nav>
 
 		<main>
-			<iframe id="mainframe" src="2024/10.html" name="log" height="100%" width="100%"></iframe>
+			<iframe id="mainframe" src="2024/11.html" name="log" height="100%" width="100%"></iframe>
 		</main>
 	</div>
 
