--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,6 +36,10 @@
 			</article> -->
 
 			<article>
+				<p><b>24.nov.24 - 12am</b> i'm so excited for <b>billlie</b>'s concert!!!! i'm gonna be bringing my 3DS so i won't be bored while waiting for the doors to open + i wanna record a bit of the concert with it. <img src="/!g/pix/catdance1.gif" alt=""></p>
+			</article>
+
+			<article>
 				<p><b>17.nov.24</b> i've been so busy lately but i can't wait to talk about my new kitten, <b>steve minecraft</b>, in a future journal log !! now i have 2 sons. <button onclick="showPic('!g/241117-steve.jpeg','a black cat in a ball','black cats LOVE me... also hes so cuteful')">steve.jpg</button></p>
 			</article>
 
