--- a/doqmeat/music/concerts/index.html
+++ b/doqmeat/music/concerts/index.html
@@ -50,17 +50,44 @@
 <body>
  <div id="frame">
   <h2>concerts</h2>
-  <h3>soon! - billlie</h3>
+  <p>here's ones that i've been to!</p>
+  <h3>24.nov.24 - billlie</h3>
+  <figure>
+   <img src="241124-billlie/banner.jpg" alt="fanmade billlie banner for the concert" width="100%">
+   <figcaption>fanmade banner for the concert!</figcaption>
+  </figure>
+  <h4>favorite performances</h4>
+  <ul>
+   <li>BTTB (back to the basics)</li>
+   <li>flipp!ng a coin</li>
+   <li>gingamingayo</li>
+   <li>ring x ring</li>
+  </ul>
+  <h4>media</h4>
+  <h5>images</h5>
+  <img src="241124-billlie/pic (4).jpg" width="100%" alt="concert group pic of kpop group billlie!">
+  <img src="241124-billlie/pic (2).jpg" width="100%" alt="concert group pic of kpop group billlie!">
+  <img src="241124-billlie/pic (3).jpg" width="100%" alt="concert group pic of kpop group billlie!">
+  <img src="241124-billlie/pic (5).jpg" width="100%" alt="concert group pic of kpop group billlie!">
+  <h5>videos</h5>
+  <figure>
+   <video width="60%" controls>
+    <source src="https://files.catbox.moe/3w0frv.mp4" type="video/mp4">
+   </video>
+   <figcaption><i>GingaMingaYo</i> recorded with my 3DS</figcaption>
+  </figure>
+  <video width="100%" controls>
+   <source src="https://files.catbox.moe/e5fjui.mp4" type="video/mp4">
+  </video>
+  <hr>
   <h3>07.feb.23 - oneus</h3>
-  <p>favorite performances:</p>
+  <h4>favorite performances</h4>
   <ul>
    <li>bring it on</li>
    <li>luna</li>
    <li>no diggity</li>
   </ul>
-  <details>
-   <summary>media (soon...)</summary>
-  </details>
+  <hr>
   <h3>dream concerts</h3>
   <ul>
    <li>hatsune miku</li>
@@ -68,7 +95,11 @@
    <li>to see any of my loona girlies</li>
   </ul>
  </div>
- <footer><a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a></footer>
+ <footer>
+  <b>last updated on: 25.nov.24</b>
+  <br>
+  <a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
+ </footer>
 </body>
 
 </html>
