--- a/doqmeat/music/concerts/index.html
+++ b/doqmeat/music/concerts/index.html
@@ -51,7 +51,7 @@
  <div id="frame">
   <h2>concerts</h2>
   <p>here's ones that i've been to!</p>
-  <h3>24.nov.24 - billlie</h3>
+  <h3 id="billlie-1">24.nov.24 - billlie</h3>
   <figure>
    <img src="241124-billlie/banner.jpg" alt="fanmade billlie banner for the concert" width="100%">
    <figcaption>fanmade banner for the concert!</figcaption>
@@ -79,8 +79,9 @@
   <video width="100%" controls>
    <source src="https://files.catbox.moe/e5fjui.mp4" type="video/mp4">
   </video>
+  <p><b>edit:</b> firefox users idk why the video above doesn't want to play on the player above.... <a href="https://files.catbox.moe/e5fjui.mp4" target="_blank">hyperlink</a> to it instead.</p>
   <hr>
-  <h3>07.feb.23 - oneus</h3>
+  <h3 id="oneus-1">07.feb.23 - oneus</h3>
   <h4>favorite performances</h4>
   <ul>
    <li>bring it on</li>
@@ -96,7 +97,7 @@
   </ul>
  </div>
  <footer>
-  <b>last updated on: 25.nov.24</b>
+  <b>last updated on: 27.nov.24</b>
   <br>
   <a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
  </footer>
